--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,7 @@ server:
   
 zuul:
   routes:
-    application:
+    application-service:
       path: /application-service/**
       stripPrefix: false
-      url: http://localhost:9090
-
-logging:
-  level:
-    org.springframework.web: ERROR
-    com.mkyong: DEBUG
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
-    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-  file: /Users/donnypissu/Documents/reframe/logs     
+      url: http://localhost:9090  
